--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="settings">Settings</string>
     <string name="press_back_to_quit">Press \'Back\' again to quit.</string>
     <string name="connecting_to">Connecting to</string>
+    <string name="connecting_error">Error connecting to host</string>
+    <string name="disconnected">Disconnected</string>
 
 </resources>
